# audit-snitch

./: .gitignore  Cargo.toml  build.rs  config.toml.example  docker_build.sh
docker-build/: build.sh  build_journald.sh  build_nojournald.sh  install.sh  update_centos.sh  update_ubuntu.sh
docker-build/centos7/: packages.sh
docker-build/ubuntu_14.04/: packages.sh
docker-build/ubuntu_16.04/: packages.sh
protos/: audit.proto
src/: main.rs  ssl_madness.rs
src/audit/: aubin.rs  auparse.rs  mod.rs
src/audit/protos/: audit.rs  mod.rs
src/crypto/: mod.rs
