[package]
name = "audit-snitch"
version = "0.1.0"
authors = ["Alexander Wauck <alex@impulse101.org>"]
build = "build.rs"

[dependencies]
regex = "0.2"
libc = "0.2.0"
protobuf = "1.3.1"
chan-signal = "0.2.0"
lazy_static = "0.2"
byteorder = "1.0"

[dependencies.openssl]
version = "0.9"
features = ["v101", "v102", "v110"]

[build-dependencies]
protoc-rust = "1.3.1"
openssl = "0.9"
