[package]
name = "audit-snitch"
version = "0.1.0"
authors = ["Alexander Wauck <alex@impulse101.org>"]
build = "build.rs"
license = "GPL-3.0"

[features]
journald = ["slog-journald"]

[dependencies]
regex = "0.2"
libc = "0.2.0"
protobuf = "1.3.1"
chan-signal = "0.2.0"
lazy_static = "0.2"
byteorder = "1.0"
slog = "2"
slog-term = "2"
slog-journald = { version = "2", optional = true }
slog-async = "2"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
clap = "2.25"
curl = "0.4"
base64 = "0.6"

[dependencies.openssl]
version = "0.9"
features = ["v101", "v102", "v110"]

[build-dependencies]
protoc-rust = "1.3.1"
openssl = "0.9"
